--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://user:NqgrsFjj4UPC68M@booksy-cluster.7j8el.gcp.mongodb.net/bookshelvesDb?retryWrites=true&w=majority
 spring.data.mongodb.database=bookshelvesDb
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-ohvjdegt.eu.auth0.com/
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URI}
 
-server.port=9055
+server.port=3004
 
