Update spring security and add delete routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.data.mongodb.uri=mongodb+srv://user:NqgrsFjj4UPC68M@booksy-cluster.7j8el.gcp.mongodb.net/bookshelvesDb?retryWrites=true&w=majority
-spring.data.mongodb.database=bookshelvesDb
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.database=${MONGODB_DB_NAME}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URI}
 
+oauth_audience = ${AUDIENCE}
 server.port=3004
 
